# libmodio

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
doc/: model.puml
examples/: CMakeLists.txt  create_module.cpp  generate_module.cpp  load_module.cpp  rewrite_module.cpp
inc/: Channel.h  Division.h  Effect.h  Module.h  Note.h  Pattern.h  Period.h  Sample.h  Sequence.h
inc/reader/: ModReader.h  ModuleReader.h
inc/writer/: ModWriter.h  ModuleWriter.h
res/samples/: high.flac  low.flac  silence.flac  sine.flac  sine.raw
src/: Channel.cpp  Division.cpp  Effect.cpp  Module.cpp  Note.cpp  Pattern.cpp  Period.cpp  Sample.cpp  Sequence.cpp  main.cpp
src/examples/: create_module.cpp  generate_module.cpp  load_module.cpp  rewrite_module.cpp
src/reader/: ModReader.cpp
src/writer/: ModWriter.cpp
test/: CMakeLists.txt  ChannelTest.cpp  DivisionTest.cpp  EffectTest.cpp  ModuleTest.cpp  NoteTest.cpp  PeriodTest.cpp  SampleTest.cpp  SequenceTest.cpp
test/integration/: ModReadWriteTest.cpp
test/reader/: ModReaderTest.cpp
test/unit/: ChannelTest.cpp  PatternTest.cpp  SampleTest.cpp
test/unit/reader/: ModReaderTest.cpp
test/unit/writer/: ModWriterTest.cpp
test/writer/: ModWriterTest.cpp
